--- a/chapter6.ipynb
+++ b/chapter6.ipynb
@@ -2617,7 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a49cb6ba",
+   "id": "058656d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2627,7 +2627,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9e22533e",
+   "id": "9ea05dbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2637,7 +2637,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ee81041e",
+   "id": "c0678c61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2654,7 +2654,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c1b0ccac",
+   "id": "07fe9cbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2664,7 +2664,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "86750308",
+   "id": "36aa36b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2673,7 +2673,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e5c96079",
+   "id": "f4f66214",
    "metadata": {},
    "source": [
     "perf.head()"
@@ -2682,7 +2682,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "10bd6180",
+   "id": "a23486f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2694,7 +2694,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "963a0ecf",
+   "id": "57d16a79",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4faea977",
+   "id": "b173b750",
    "metadata": {},
    "outputs": [
     {
@@ -2736,7 +2736,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3a9175e8",
+   "id": "8e73a879",
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2757,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "68003af5",
+   "id": "005e1387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2767,7 +2767,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "347532dc",
+   "id": "fa7e728a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2777,7 +2777,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e792958b",
+   "id": "0e6794b1",
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2856,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b8dbf741",
+   "id": "86ad7136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2866,7 +2866,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4cb18318",
+   "id": "93e10a82",
    "metadata": {},
    "outputs": [
     {
@@ -2945,7 +2945,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e3d921ef",
+   "id": "be1d3d1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2955,7 +2955,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ee2031a4",
+   "id": "e755267e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2965,7 +2965,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "12502459",
+   "id": "205e6358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2975,7 +2975,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ce092071",
+   "id": "bebe1575",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2985,7 +2985,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "161cb3b6",
+   "id": "710cdaf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2995,7 +2995,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "645baa14",
+   "id": "d1a8ef5a",
    "metadata": {},
    "outputs": [
     {
@@ -3017,7 +3017,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e3d30a00",
+   "id": "2aa12312",
    "metadata": {},
    "outputs": [
     {
@@ -3123,7 +3123,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a5ecd2ab",
+   "id": "3aba0e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3133,7 +3133,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d4bcae46",
+   "id": "a590ddba",
    "metadata": {},
    "outputs": [
     {
@@ -3211,7 +3211,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ff7f9e77",
+   "id": "6be578f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3221,7 +3221,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ad04d022",
+   "id": "3f5b8664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3231,7 +3231,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b7f4f665",
+   "id": "f20d5bd6",
    "metadata": {},
    "outputs": [
     {
@@ -3304,7 +3304,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1d39115e",
+   "id": "0cfad679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3314,7 +3314,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "594a9e09",
+   "id": "80dbea52",
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "44c25ba1",
+   "id": "4d878769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3407,7 +3407,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ab50d8e8",
+   "id": "cc6694c0",
    "metadata": {},
    "outputs": [
     {
@@ -3490,7 +3490,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ade8f7f9",
+   "id": "a2bf51dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3500,7 +3500,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "49fe4ef4",
+   "id": "fe764a2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3510,7 +3510,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3c48c854",
+   "id": "978f695b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3520,7 +3520,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "93d7f5db",
+   "id": "cafbf488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3530,7 +3530,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d3af3b7f",
+   "id": "7ca941ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3540,7 +3540,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "02bb416d",
+   "id": "e6209bb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3550,7 +3550,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3768a48e",
+   "id": "ec1e2b5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3560,7 +3560,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9b4d0052",
+   "id": "dcdbc983",
    "metadata": {},
    "outputs": [
     {
@@ -3581,7 +3581,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f85e18a7",
+   "id": "51cbc115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3591,7 +3591,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "45ad4d4f",
+   "id": "f0afea1a",
    "metadata": {},
    "outputs": [
     {
@@ -3612,7 +3612,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c149607e",
+   "id": "dc5aa5b8",
    "metadata": {},
    "outputs": [
     {
@@ -5871,7 +5871,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "adddd929",
+   "id": "23d0a2cf",
    "metadata": {},
    "outputs": [
     {
@@ -5893,7 +5893,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "c2a619c3",
+   "id": "5591225d",
    "metadata": {},
    "outputs": [
     {
@@ -5915,7 +5915,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "49bee5d7",
+   "id": "017e583c",
    "metadata": {},
    "outputs": [
     {
@@ -5937,7 +5937,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1f761bb7",
+   "id": "e6acaaf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5947,7 +5947,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "dd531b49",
+   "id": "39112d75",
    "metadata": {},
    "outputs": [
     {
@@ -6240,7 +6240,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "49d29b01",
+   "id": "378a9f64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6250,7 +6250,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "dc5c6841",
+   "id": "b72ec589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6266,7 +6266,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e2ff1952",
+   "id": "a3aff29e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6276,7 +6276,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "663028d8",
+   "id": "609f84b6",
    "metadata": {},
    "outputs": [
     {
@@ -6297,7 +6297,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f1337c09",
+   "id": "bf82924d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6307,7 +6307,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "42db5f4c",
+   "id": "8cd3912d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6319,7 +6319,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "620645b0",
+   "id": "c188dfbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6329,7 +6329,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ffb8a5cc",
+   "id": "c1d8ba0f",
    "metadata": {},
    "outputs": [
     {
@@ -6350,7 +6350,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0dd9be67",
+   "id": "e0cf6ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6360,7 +6360,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "fcd1d48b",
+   "id": "9d572382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6370,7 +6370,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6eef1d46",
+   "id": "66c4f639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6380,7 +6380,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "1529fe49",
+   "id": "59ac4537",
    "metadata": {},
    "outputs": [
     {
@@ -6403,7 +6403,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b2d9cc37",
+   "id": "35152c08",
    "metadata": {},
    "outputs": [
     {
@@ -6427,7 +6427,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "12884464",
+   "id": "4ad4cf8c",
    "metadata": {},
    "outputs": [
     {
@@ -6501,13 +6501,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "47ef3bbe",
+   "execution_count": 70,
+   "id": "c515f822",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import "
+    "import sqlalchemy as sqla"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "27c7344f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = sqla.create_engine('sqlite:///mydata.sqlite')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "92fa35e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "      <th>d</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tallahassee</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sacramento</td>\n",
+       "      <td>California</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             a           b     c  d\n",
+       "0      Atlanta     Georgia  1.25  6\n",
+       "1  Tallahassee     Florida  2.60  3\n",
+       "2   Sacramento  California  1.70  5"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql('select * from test', db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dd8160f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
