--- a/chapter 10.ipynb
+++ b/chapter 10.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26103d44",
+   "id": "584141f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "641e31ec",
+   "id": "04a2398c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0d127640",
+   "id": "0e514525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fb3611c6",
+   "id": "99a01d1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "359e9bab",
+   "id": "739a5975",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "81a04464",
+   "id": "df8f899e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6273644a",
+   "id": "438a7c99",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "47cca974",
+   "id": "53b83945",
    "metadata": {},
    "outputs": [
     {
@@ -188,12 +188,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5e15b20d",
+   "execution_count": 9,
+   "id": "0d281fdc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "means = df['data1'].groupby([df['key1'], df['key2']])"
+    "means = df['data1'].groupby([df['key1'], df['key2']]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fd72bd61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "key1  key2\n",
+       "a     one     0.309547\n",
+       "      two     0.591106\n",
+       "b     one     0.160742\n",
+       "      two    -0.363276\n",
+       "Name: data1, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "199e95ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gi"
    ]
   }
  ],
