--- a/samplecode_20201021/6章/6章_物流の最適ルートをコンサルティングする１０本ノック.ipynb
+++ b/samplecode_20201021/6章/6章_物流の最適ルートをコンサルティングする１０本ノック.ipynb
@@ -1604,10 +1604,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "総輸送コスト: 1493\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tc = pd.read_csv('trans_cost.csv', index_col='工場')\n",
+    "\n",
+    "def trans_cost(df_tr, df_tc):\n",
+    "    cost = 0\n",
+    "    for i in range(len(df_tr.index)):\n",
+    "        for j in range(len(df_tr.columns)):\n",
+    "            cost += df_tr.iloc[i][j] * df_tc.iloc[i][j]\n",
+    "    return cost\n",
+    "\n",
+    "print('総輸送コスト: ' + str(trans_cost(df_tr, df_tc)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1618,10 +1637,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   F1  F2  F3  F4\n",
+      "0  28  29  31  25\n",
+      "   W1  W2  W3\n",
+      "0  35  41  42\n",
+      "F1への輸送量: 30（需要量:28)\n",
+      "需要量を満たしています\n",
+      "F2への輸送量: 30（需要量:29)\n",
+      "需要量を満たしています\n",
+      "F3への輸送量: 32（需要量:31)\n",
+      "需要量を満たしています\n",
+      "F4への輸送量: 25（需要量:25)\n",
+      "需要量を満たしています\n",
+      "W1からの輸送量: 35(供給限界: 35)\n",
+      "供給限界の範囲内です\n",
+      "W2からの輸送量: 40(供給限界: 41)\n",
+      "供給限界の範囲内です\n",
+      "W3からの輸送量: 42(供給限界: 42)\n",
+      "供給限界の範囲内です\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_demand = pd.read_csv('demand.csv')\n",
+    "df_supply = pd.read_csv('supply.csv')\n",
+    "\n",
+    "print(df_demand)\n",
+    "print(df_supply)\n",
+    "for i in  range(len(df_demand.columns)):\n",
+    "    temp_sum  = sum(df_tr[df_demand.columns[i]])\n",
+    "    print(str(df_demand.columns[i]) + \"への輸送量: \" + str(temp_sum) + '（需要量:' + str(df_demand.iloc[0][i]) + \")\")\n",
+    "    if temp_sum >= df_demand.iloc[0][i]:\n",
+    "        print('需要量を満たしています')\n",
+    "    else:\n",
+    "        print('需要量を満たしていません。輸送ルートを再計算してください')\n",
+    "\n",
+    "for i in range(len(df_supply.columns)):\n",
+    "    temp_sum = sum(df_tr.loc[df_supply.columns[i]])\n",
+    "    print(str(df_supply.columns[i]) + 'からの輸送量: '+ str(temp_sum) + \"(供給限界: \" +str(df_supply.iloc[0][i]) + \")\")\n",
+    "    if temp_sum <= df_supply.iloc[0][i]:\n",
+    "        print('供給限界の範囲内です')\n",
+    "    else:\n",
+    "        print('供給限界を超えています。輸送ルートを再計算してください')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1632,10 +1697,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    F1  F2  F3  F4\n",
+      "工場                \n",
+      "W1  15  15   0   0\n",
+      "W2   5   0  30  10\n",
+      "W3  10  15   2  15\n",
+      "総輸送コスト(変更後): 1428\n",
+      "需要条件計算結果: [1. 1. 1. 1.]\n",
+      "供給条件計算結果: [1. 0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tr_new = pd.read_csv('trans_route_new.csv', index_col='工場')\n",
+    "print(df_tr_new)\n",
+    "\n",
+    "print('総輸送コスト(変更後): ' +str(trans_cost(df_tr_new, df_tc)))\n",
+    "\n",
+    "def condition_demand(df_tr, df_demand):\n",
+    "    flag = np.zeros(len(df_demand.columns))\n",
+    "    for i in range(len(df_demand.columns)):\n",
+    "        temp_sum = sum(df_tr[df_demand.columns[i]])\n",
+    "        if (temp_sum >= df_demand.iloc[0][i]):\n",
+    "            flag[i] = 1\n",
+    "    return flag\n",
+    "\n",
+    "def condition_supply(df_tr, df_supply):\n",
+    "    flag  = np.zeros(len(df_supply.columns))\n",
+    "    for i in range(len(df_supply.columns)):\n",
+    "        temp_sum = sum(df_tr.loc[df_supply.columns[i]])\n",
+    "        if temp_sum <= df_supply.iloc[0][i]:\n",
+    "            flag[i] = 1\n",
+    "    return  flag\n",
+    "print('需要条件計算結果: ' + str(condition_demand(df_tr_new, df_demand)))\n",
+    "print('供給条件計算結果: '  + str(condition_supply(df_tr_new, df_supply)))"
+   ]
   },
   {
    "cell_type": "code",
