--- a/samplecode_20201021/7章/7章 ロジスティクスネットワークの最適設計を行う10本ノック.ipynb
+++ b/samplecode_20201021/7章/7章 ロジスティクスネットワークの最適設計を行う10本ノック.ipynb
@@ -19,10 +19,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    F1  F2  F3  F4\n",
+      "工場                \n",
+      "W1  10  10  11  27\n",
+      "W2  18  21  12  14\n",
+      "W3  15  12  14  12\n",
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /Users/kazuyaaoki/.pyenv/versions/3.10.3/lib/python3.10/site-packages/pulp/apis/../solverdir/cbc/osx/64/cbc /var/folders/tl/3mcdykwx5g145dz_cpc1vdxc0000gn/T/909f2d3abef74a59bc3509360d0a02a3-pulp.mps timeMode elapsed branch printingOptions all solution /var/folders/tl/3mcdykwx5g145dz_cpc1vdxc0000gn/T/909f2d3abef74a59bc3509360d0a02a3-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 12 COLUMNS\n",
+      "At line 49 RHS\n",
+      "At line 57 BOUNDS\n",
+      "At line 58 ENDATA\n",
+      "Problem MODEL has 7 rows, 12 columns and 24 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 7 (0) rows, 12 (0) columns and 24 (0) elements\n",
+      "0  Obj 0 Primal inf 113 (4)\n",
+      "7  Obj 1296\n",
+      "Optimal - objective value 1296\n",
+      "Optimal objective 1296 - 7 iterations time 0.002\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n",
+      "    F1  F2  F3  F4\n",
+      "工場                \n",
+      "W1  28   7   0   0\n",
+      "W2   0   0  31   5\n",
+      "W3   0  22   0  20\n",
+      "総輸送コスト: 1296.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from itertools import product\n",
+    "from pulp import LpVariable, lpSum, value\n",
+    "from ortoolpy import model_min, addvars, addvals\n",
+    "\n",
+    "df_tc = pd.read_csv('trans_cost.csv', index_col='工場')\n",
+    "print(df_tc)\n",
+    "df_demand = pd.read_csv('demand.csv')\n",
+    "df_supply = pd.read_csv('supply.csv')\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "nw =  len(df_tc.index)\n",
+    "nf = len(df_tc.columns)\n",
+    "pr = list(product(range(nw), range(nf)))\n",
+    "\n",
+    "m1 = model_min()\n",
+    "v1  = {(i, j):LpVariable('v%d_%d'%(i, j), lowBound=0) for i, j in pr}\n",
+    "\n",
+    "m1 += lpSum(df_tc.iloc[i][j] * v1[i,j] for i, j in pr)\n",
+    "for i in range(nw):\n",
+    "    m1 += lpSum(v1[i, j] for j in range(nf)) <= df_supply.iloc[0][i]\n",
+    "for j in range(nf):\n",
+    "    m1 += lpSum(v1[i,j] for i in range(nw)) >= df_demand.iloc[0][j]\n",
+    "m1.solve()\n",
+    "\n",
+    "df_tr_sol = df_tc.copy()\n",
+    "total_cost = 0\n",
+    "for k, x in v1.items():\n",
+    "    i, j = k[0], k[1]\n",
+    "    df_tr_sol.iloc[i][j] = value(x)\n",
+    "    total_cost += df_tc.iloc[i][j] * value(x)\n",
+    "\n",
+    "print(df_tr_sol)\n",
+    "print('総輸送コスト: ' +str(total_cost))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,7 +112,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import networkx as nx\n",
+    "\n",
+    "df_tr = df_tr_sol.copy()\n",
+    "df_pos = pd.read_csv('trans_route_pos.csv')\n",
+    "print(df_pos)\n",
+    "\n",
+    "G = nx.Graph()\n",
+    "\n",
+    "for i in range(len(df_pos.columns)):\n",
+    "    G_add_node(df_pos.columns[i])\n",
+    "    \n",
+    "num_pre = 0\n",
+    "edge_weights = []\n",
+    "size = 0.1\n",
+    "for i in range(len(df_pos.columns)):\n",
+    "    for j in range(lne(df_pos.columns)):\n",
+    "        if not(i==j):\n",
+    "            G.add_edge(df_pos.columns[i], df_pos.columns[j])\n",
+    "            if num_pre < len(G.edge):\n",
+    "                num_pre = len(G.edge)\n",
+    "                weight  = 0\n",
+    "                if (df_pos.columns[i] in df_tr.columns) and (df_pos.columns[j] in df_tr.index):\n",
+    "                    if df_tr[df_pos.columns[i]][df_pos.columns[j]]:\n",
+    "                        weight = df_tr[df_pos.columns[i]][df_pos.columns[j]] * size\n",
+    "                elif(df_pos.columns[j] in df_tr.columns) and (df_pos.columns[i] in df_tr.index):\n",
+    "                    if df_tr[df_pos.columns[j]][df_pos.columns[i]]:\n",
+    "                        weight = df_tr[df_pos.columns[j]][df_pos.columns[i]] *size\n",
+    "                edge_weights.append(weight)\n",
+    "\n",
+    "pos = {}\n",
+    "for i in range(len(df_pos.columns)):\n",
+    "    node = df_pos.columns[i]\n",
+    "    pos[node] = (df_pos[node][0], df_pos[node][1])\n",
+    "    \n",
+    "    \n",
+    "nx.draw(G, pos, with_labels = True, font_size=16, node_size=1000, node_color = 'k', font_color=0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
