pushする用のバッチファイル作ってみた

--- a/Pmaster/ch04.ipynb
+++ b/Pmaster/ch04.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7f0d972b",
+   "id": "c1ddb291",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "69ab9543",
+   "id": "2f552b5b",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5fd51259",
+   "id": "2bf79891",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "70024415",
+   "id": "00cacd01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d908f31c",
+   "id": "543f984f",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d3916d03",
+   "id": "3bd4c87c",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5876385f",
+   "id": "b0189d5f",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9f246eef",
+   "id": "6d28d61a",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "85cb7157",
+   "id": "88969cd9",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8f0061ab",
+   "id": "d2034195",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6fdf46be",
+   "id": "6d6d55c1",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4923a38d",
+   "id": "00636873",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "11636986",
+   "id": "e7c10555",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "01e1830e",
+   "id": "93b48c4f",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "10ed2f4e",
+   "id": "d14ee6dc",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2340afbf",
+   "id": "93bda59c",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "338f0ab4",
+   "id": "85507fe3",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c2b787fd",
+   "id": "5da4cfc0",
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d8c6b2ee",
+   "id": "cee1fce7",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "78f3a936",
+   "id": "c2ca6434",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f8639f84",
+   "id": "7edff4eb",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "930ed6de",
+   "id": "4737e920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "81723302",
+   "id": "1709677c",
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b0bdcfe8",
+   "id": "499f3e01",
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2c265e9b",
+   "id": "66214d7f",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a044b560",
+   "id": "f19614d8",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8ff15356",
+   "id": "628c1407",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "55b98864",
+   "id": "5890c65b",
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f97500ad",
+   "id": "77f92316",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "893edf9e",
+   "id": "eb7aec38",
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "9bdf5bb5",
+   "id": "272926a6",
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9cea626b",
+   "id": "3ba378b6",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "48cde1a0",
+   "id": "89a82abf",
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6b039439",
+   "id": "e4cf1057",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "c198d5b5",
+   "id": "9936a147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "ffb870bd",
+   "id": "7311396a",
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "92d12a42",
+   "id": "825a242e",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "7006110b",
+   "id": "1a7e58f0",
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "19796d9e",
+   "id": "27264798",
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "90f03d48",
+   "id": "30b77f99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "71f178cb",
+   "id": "e8e8ad6f",
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "be01640c",
+   "id": "dd31ba2e",
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "2cd99bc7",
+   "id": "c2b6a35f",
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "5f9acf99",
+   "id": "80c95426",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "2d8b0532",
+   "id": "5fe6f92f",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "8840a93b",
+   "id": "79699a94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1835,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "799c5b76",
+   "id": "8a91ba62",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1857,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "6f4d0bd7",
+   "id": "2a6b5616",
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "b4a3e991",
+   "id": "a614e563",
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "e7315ce0",
+   "id": "1a7893f1",
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1967,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "17f21ab5",
+   "id": "09e1c7a8",
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "166004e5",
+   "id": "2b6704e8",
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2020,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "7b9df3a9",
+   "id": "ab926938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "771967b9",
+   "id": "1306580f",
    "metadata": {},
    "outputs": [
     {
@@ -2055,7 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "1c9ac484",
+   "id": "ee95ea5b",
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "008586c4",
+   "id": "d9199079",
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2374,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "5ca54563",
+   "id": "99906da4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2409,7 +2409,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "e5ea30a7",
+   "id": "c6020e85",
    "metadata": {},
    "outputs": [
     {
@@ -2451,8 +2451,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 153,
+   "id": "555dccf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('sample')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5cbf5bab",
+   "id": "71f9cebf",
    "metadata": {},
    "outputs": [],
    "source": []
