pipeline強くね？スクレイピングの時は全然思わなかったのに

--- a/Pmaster/chp5.ipynb
+++ b/Pmaster/chp5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76c7092e",
+   "id": "e74cf79d",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "023ec4bd",
+   "id": "6c7ac73f",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53e6c332",
+   "id": "e959cf1c",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "175a2488",
+   "id": "227a752d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4441b38b",
+   "id": "e92bd9a7",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3adf7e77",
+   "id": "aea46d4c",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1e27447b",
+   "id": "019d3a48",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a0e18689",
+   "id": "d33e0cad",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3eb22911",
+   "id": "70a912f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1c266167",
+   "id": "5646931e",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dc632f5d",
+   "id": "bc40c450",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a5cf7671",
+   "id": "4fd57efa",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "76be54fd",
+   "id": "cf6332d3",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a6ea1ff5",
+   "id": "085f6c8f",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "da6ea0cf",
+   "id": "80aa3089",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "30a51024",
+   "id": "3e1efd13",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5c61a634",
+   "id": "86dd189c",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "24e76aeb",
+   "id": "d89531c0",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7811577c",
+   "id": "f422a95e",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e7021a4f",
+   "id": "b86f6f54",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "daa9b947",
+   "id": "e51fa1f8",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1be55130",
+   "id": "24ab8afa",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e90fff10",
+   "id": "7a76249b",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5cf3e229",
+   "id": "6306758c",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4d2ba692",
+   "id": "7d62aeb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "74cf2426",
+   "id": "5c53e7fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "0d9f1b19",
+   "id": "594b456d",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e6597e71",
+   "id": "3199db0d",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "74096a2b",
+   "id": "63d27e8d",
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f7841f62",
+   "id": "ef300260",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9f6c6d44",
+   "id": "97d09ba7",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4bb558f5",
+   "id": "2720125f",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "74ce9d10",
+   "id": "b3f49249",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f74618e6",
+   "id": "d6d57a4c",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3d7d3467",
+   "id": "2aab2b36",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "611a12d3",
+   "id": "62632800",
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1789,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ade306a2",
+   "id": "e358a4b9",
    "metadata": {},
    "outputs": [
     {
@@ -1810,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d31398ee",
+   "id": "5ec91003",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1841,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2d5e242c",
+   "id": "335d4e89",
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0614d480",
+   "id": "d39999fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "21a03d13",
+   "id": "87cb60fa",
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ee466286",
+   "id": "61fe0b21",
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c485f71e",
+   "id": "69bc69dd",
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1949,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "47f46b30",
+   "id": "7e215fb9",
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "73ca218a",
+   "id": "93f79d59",
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "49f4772c",
+   "id": "b52ad398",
    "metadata": {},
    "outputs": [
     {
@@ -2033,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "750da936",
+   "id": "7f683e10",
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2058,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2ca7e0d4",
+   "id": "87c1dc39",
    "metadata": {},
    "outputs": [
     {
@@ -2097,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e07d6083",
+   "id": "3f9e70bc",
    "metadata": {},
    "outputs": [
     {
@@ -2123,7 +2123,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c71dc8b9",
+   "id": "ab34d8c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2136,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5894d4d7",
+   "id": "36b8e055",
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "72c467dc",
+   "id": "8d5401a8",
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "808660b4",
+   "id": "00a8c4b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2193,7 +2193,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "742e842b",
+   "id": "4de706a0",
    "metadata": {},
    "outputs": [
     {
@@ -2219,7 +2219,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "0b872e15",
+   "id": "c1828129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2230,7 +2230,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "bc78ca1e",
+   "id": "ed8a650f",
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2275,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "0ee1fbfc",
+   "id": "34a0c725",
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "bd1eb18d",
+   "id": "78bf615d",
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2344,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "8a254652",
+   "id": "88f5aa83",
    "metadata": {},
    "outputs": [
     {
@@ -2367,7 +2367,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "c34f3a2e",
+   "id": "29fd3fc1",
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2410,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "9cbd0079",
+   "id": "45366ecb",
    "metadata": {},
    "outputs": [
     {
@@ -2454,7 +2454,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "971811aa",
+   "id": "d2143ed5",
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "da699721",
+   "id": "022436cd",
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2535,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "3798336b",
+   "id": "6d57a330",
    "metadata": {},
    "outputs": [
     {
@@ -2583,7 +2583,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "1085ba32",
+   "id": "7d10aa04",
    "metadata": {},
    "outputs": [
     {
@@ -2617,7 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "95c7b38f",
+   "id": "f825ee9b",
    "metadata": {},
    "outputs": [
     {
@@ -2651,7 +2651,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "a777913f",
+   "id": "a27c5b55",
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "4e05bd89",
+   "id": "3df6d6ce",
    "metadata": {},
    "outputs": [
     {
@@ -2694,8 +2694,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 110,
+   "id": "2ff7186e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid-Search with accuracy\n",
+      "Best parameters: {'gamma': 0.0001}\n",
+      "Best cross-validation score (accuracy): 0.975500481894534\n",
+      "Test set AUC: 0.9919222849902327\n",
+      "Test  set accuracy: 0.9733333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train , X_test, y_train, y_test = train_test_split(digits.data, digits.target == 9, random_state=0)\n",
+    "\n",
+    "param_grid = {'gamma': [0.0001,0.01, 0.1,1,10]}\n",
+    "\n",
+    "grid = GridSearchCV(SVC(), param_grid=param_grid)\n",
+    "grid.fit(X_train, y_train)\n",
+    "print(f'Grid-Search with accuracy')\n",
+    "print(f'Best parameters: {grid.best_params_}')\n",
+    "print(f'Best cross-validation score (accuracy): {grid.best_score_}')\n",
+    "print(f'Test set AUC: {roc_auc_score(y_test, grid.decision_function(X_test))}')\n",
+    "print(f'Test  set accuracy: {grid.score(X_test,y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "73125486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Grid-Search with AUC\n",
+      "Best  parameters: {'gamma': 0.01}\n",
+      "Best cross-validaition score (AUC): 0.997999457969529\n",
+      "Test set AUC: 0.999524840293543\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid = GridSearchCV(SVC(), param_grid = param_grid, scoring='roc_auc')\n",
+    "grid.fit(X_train, y_train)\n",
+    "print('\\nGrid-Search with AUC')\n",
+    "print(f'Best  parameters: {grid.best_params_}')\n",
+    "print(f'Best cross-validaition score (AUC): {grid.best_score_}')\n",
+    "print(f'Test set AUC: {grid.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "256f93d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn.metrics.Scorer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [114]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mScorer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SCORERS\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvailable scorers: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28msorted\u001b[39m(SCORERS\u001b[38;5;241m.\u001b[39mkeys())\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.metrics.Scorer'"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import SCORERS\n",
+    "print(f'Available scorers: {sorted(SCORERS.keys())}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "64e34a5a",
+   "id": "4f0d5e6b",
    "metadata": {},
    "outputs": [],
    "source": []
