--- a/kagglebook-master/kaggle.ipynb
+++ b/kagglebook-master/kaggle.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "495fec1e",
+   "id": "02433fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6c277ad",
+   "id": "e23baf50",
    "metadata": {},
    "outputs": [
     {
@@ -39,13 +39,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be67d482",
+   "execution_count": 3,
+   "id": "072e3915",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_long = df_wide.stack().reset_index(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ecd04c22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           level_1     0\n",
+      "2016-07-01       A   532\n",
+      "2016-07-01       B  3314\n",
+      "2016-07-01       C  1136\n",
+      "2016-07-02       A   798\n",
+      "2016-07-02       B  2461\n",
+      "...            ...   ...\n",
+      "2016-12-30       B  4243\n",
+      "2016-12-30       C  2069\n",
+      "2016-12-31       A   869\n",
+      "2016-12-31       B  4703\n",
+      "2016-12-31       C  2233\n",
+      "\n",
+      "[552 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "428c311e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
