サブディレクトリのインポートを習得した！

--- a/kagglebook-master/kaggle.ipynb
+++ b/kagglebook-master/kaggle.ipynb
@@ -3936,7 +3936,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "b5cad93f",
+   "id": "500e8390",
    "metadata": {},
    "outputs": [
     {
@@ -3964,7 +3964,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "607ecfdb",
+   "id": "1f7baa21",
    "metadata": {},
    "outputs": [
     {
@@ -4001,7 +4001,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "6e024317",
+   "id": "0f88d437",
    "metadata": {},
    "outputs": [
     {
@@ -6483,7 +6483,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "c94bc118",
+   "id": "46679d04",
    "metadata": {},
    "outputs": [
     {
@@ -6778,8 +6778,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "id": "284701ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [104]\u001b[0m, in \u001b[0;36m<cell line: 23>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m log_loss\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KFold\n\u001b[0;32m---> 23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mch07\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m models\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
+   "source": [
+    "# ---------------------------------\n",
+    "# データ等の準備\n",
+    "# ----------------------------------\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# train_xは学習データ、train_yは目的変数、test_xはテストデータ\n",
+    "# pandasのDataFrame, Seriesで保持します。（numpyのarrayで保持することもあります）\n",
+    "\n",
+    "train = pd.read_csv('./input/sample-data/train_preprocessed.csv')\n",
+    "train_x = train.drop(['target'], axis=1)\n",
+    "train_y = train['target']\n",
+    "test_x = pd.read_csv('./input/sample-data/test_preprocessed.csv')\n",
+    "\n",
+    "# neural net用のデータ\n",
+    "train_nn = pd.read_csv('./input/sample-data/train_preprocessed_onehot.csv')\n",
+    "train_x_nn = train_nn.drop(['target'], axis=1)\n",
+    "train_y_nn = train_nn['target']\n",
+    "test_x_nn = pd.read_csv('./input/sample-data/test_preprocessed_onehot.csv')\n",
+    "\n",
+    "from sklearn.metrics import log_loss\n",
+    "from sklearn.model_selection import KFold\n",
+    "from .ch07 import models \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0ee5c528",
+   "id": "e124f041",
    "metadata": {},
    "outputs": [],
    "source": []
